# VideoLingo

./: .env.example  .gitignore  .pre-commit-config.yaml  BUG_SECURITY_AUDIT_REPORT.md  CLAUDE.md  CLEANUP_COMPLETE.md  CONTRIBUTING.md  CRITICAL_FIXES_PRIORITY_LIST.md  DOWNLOAD_PROGRESS_FIXES.md  Dockerfile.cpu  MEMORY_SECURITY_FIXES_SUMMARY.md  Makefile  P1_SECURITY_FIXES_COMPLETE.md  README.md  REMAINING_ISSUES_ANALYSIS.md  SECURITY_FIXES_IMPLEMENTATION_REPORT.md  SECURITY_FIXES_SIDEBAR.md  SECURITY_FIXES_SUMMARY.md  SESSION_SECURITY_AUDIT_REPORT.md  TEST_COVERAGE_REPORT.md  TEST_RESULTS_SUMMARY.md  config.test.yaml  config.yaml  config.yaml.original  conftest.py  coverage_analysis.py  deploy.bat  deploy.py  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  st.py  test_download_fix.py  test_p1_security_fixes.py  test_security_fixes.py  tox.ini  vlingo
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: integration_tests.yml  performance_monitoring.yml  test.yml
.streamlit/: config.toml
batch/utils/: video_processor.py
core/: _10_gen_audio.py  _11_merge_audio.py  _12_dub_to_vid.py  _1_ytdlp.py  _1_ytdlp_refactored.py  _2_asr.py  _3_2_split_meaning.py  _4_2_translate.py  _6_gen_sub.py  _7_sub_into_vid.py  _8_1_audio_task.py  _8_2_dub_chunks.py  _9_refer_audio.py  __init__.py  constants.py  prompts.py  test_performance_benchmarks.py  translate_lines.py
core/asr_backend/: audio_preprocess.py  demucs_vl.py
core/download/: __init__.py  download_manager.py  error_handler.py  filename_utils.py  format_selector.py  video_validator.py
core/st_utils/: download_video_section.py  imports_and_utils.py  sidebar_setting.py  video_input_section.py
core/tts_backend/: azure_tts.py  estimate_duration.py  gpt_sovits_tts.py  openai_tts.py  tts_engine_factory.py  tts_main.py
core/utils/: __init__.py  ask_gpt.py  config_manager.py  config_utils.py  delete_retry_dubbing.py  file_security.py  models.py  observability.py  onekeycleanup.py  path_adapter.py  performance_integration.py  performance_monitor.py  performance_optimization_advisor.py  performance_regression_detector.py  performance_visualization.py  security_utils.py  session_security.py  time_utils.py  video_manager.py
docs/: PERFORMANCE_MONITORING.md  PHASE_2_IMPLEMENTATION_REPORT.md  README.md
docs/architecture/: ARCHITECTURE.md  CLAUDE_UX_AGENT_SYSTEM.md  GITIGNORE_MANAGEMENT_AGENT.md  QUALITY_GUARDIAN_AGENT.md  UX_AGENT_ANALYSIS_EXAMPLE.md  UX_AGENT_INTEGRATION_TEST.md
docs/deployment/: COVERAGE_CONFIG_SUMMARY.md  DEPLOYMENT_SUMMARY.md  SECURITY_REPORT.md
docs/pages/docs/: docker.en-US.md  docker.zh-CN.md  start.en-US.md  start.zh-CN.md
docs/project-management/: VIDEOLINGO_REBUILD_PROMPT.md  VIDEOLINGO_TESTING_EXCELLENCE_PROMPT.md  VIDEOLINGO_UX_DESIGN_PROMPT.md
docs/testing/: COMPREHENSIVE_TEST_EXECUTION_REPORT.md  TESTING_CONFIGURATION_SUMMARY.md  coverage_analysis_report.md  coverage_summary.txt
docs/testing-architecture/: FINAL_ARCHITECTURE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  NEW_TESTING_ARCHITECTURE.md  QUALITY_STANDARDS_CHECKLIST.md  README.md  TEAM_COLLABORATION_GUIDE.md  TECHNICAL_IMPLEMENTATION_GUIDE.md  TESTING_ARCHITECTURE_DESIGN.md  TEST_REFACTORING_MASTER_GUIDE.md
quality_guardian/: README.md  __init__.py  cli.py
quality_guardian/config/: quality_standards.yaml
quality_guardian/core/: guardian.py
quality_guardian/examples/: integration_example.py
scripts/: coverage_analysis.py  deploy.sh  fix_env.py  install_global.sh  install_minimal.py  measure_coverage.py  performance_test_runner.py  run_integration_tests.sh  vlingo
tests/: .coveragerc  README.md  TEST_GUIDE.md  __init__.py  conftest.py  pytest.ini  requirements-test.txt  test_config_comprehensive.py  test_config_final.py  test_config_isolated.py  test_config_real.py  test_config_simple.py  test_media_processing.py  test_runner.py  test_simple.py  test_video_manager_isolated.py  test_video_manager_simple.py  test_video_pipeline.py
tests/e2e/: README.md  e2e_test_report.json  test_complete_video_pipeline.py  test_configuration_variants_pipeline.py  test_e2e_suite_runner.py  test_error_recovery_pipeline.py  test_user_workflows.py
tests/fixtures/: README.md  base.py  cache.py  cleanup.py  example_usage.py  fixtures.py  generators.py
tests/fixtures/samples/api_responses/: azure_tts_success.json  elevenlabs_error.json  openai_rate_limit.json  openai_success.json  translation_batch.json  (+1 more)
tests/integration/: README.md  test_ai_services.py  test_ai_services_simple.py  test_backend_integration.py  test_external_apis.py  test_file_operations.py  test_full_pipeline.py  test_pipeline_flow.py  test_smoke_integration.py
tests/manual_root/: conftest.py  test_download_fix.py  test_p1_security_fixes.py  test_security_fixes.py
tests/unit/: test_10_gen_audio.py  test_10_gen_audio_comprehensive.py  test_10_gen_audio_comprehensive_coverage.py  test_1_ytdlp.py  test_1_ytdlp_comprehensive.py  test_1_ytdlp_comprehensive_coverage.py  test_2_asr_comprehensive.py  test_2_asr_comprehensive_coverage.py  test_2_asr_comprehensive_enhanced.py  test_2_asr_isolated.py  test_302ai_api.py  test_3_1_split_nlp_comprehensive.py  test_4_2_translate_comprehensive.py  test_ask_gpt.py  test_ask_gpt_comprehensive.py  test_ask_gpt_comprehensive_coverage.py  test_asr_backend_comprehensive.py  test_asr_backend_functional.py  test_asr_factory.py  test_asr_factory_comprehensive.py  test_asr_functional.py  test_asr_main.py  test_asr_module.py  test_audio_pipeline_functional.py  test_audio_preprocess.py  test_audio_preprocess_comprehensive.py  test_azure_tts.py  test_azure_tts_comprehensive.py  test_blocking_issues_fixes.py  test_config_utils.py  test_config_utils_comprehensive.py  test_config_utils_minimal.py  test_config_utils_save_key_contract.py  test_core_processing_functional.py  test_custom_tts.py  test_decorator_comprehensive.py  test_edge_tts.py  test_estimate_duration.py  test_estimate_duration_comprehensive.py  test_file_security_comprehensive.py  (+38 more)
translations/: README.zh.md  en.json  zh-CN.json
(+12 files in other folders)
