# VideoLingo Project Configuration
# Modern Python project configuration using pyproject.toml standard

[build-system]
requires = ["setuptools>=65.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "VideoLingo"
version = "3.0.0"
description = "AI-powered video translation and dubbing system"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "VideoLingo Team", email = "contact@videolingo.dev"}
]
maintainers = [
    {name = "VideoLingo Maintainers", email = "maintainers@videolingo.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Content Creators", 
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
keywords = [
    "video", "translation", "dubbing", "ai", "ml", "nlp", 
    "speech-recognition", "text-to-speech", "streamlit"
]
requires-python = ">=3.9"
dependencies = [
    # Core dependencies
    "librosa>=0.10.2",
    "pytorch-lightning>=2.3.3",
    "lightning>=2.3.3", 
    "transformers>=4.39.3",
    "moviepy>=1.0.3",
    "numpy>=1.26.4",
    "openai>=1.55.3",
    "opencv-python>=4.10.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydub>=0.25.1",
    "PyYAML>=6.0.2",
    "requests>=2.32.3",
    "resampy>=0.4.3",
    "spacy>=3.7.4",
    "streamlit>=1.38.0",
    "yt-dlp",
    # Utility dependencies
    "json-repair",
    "ruamel.yaml",
    "python-dotenv",
    "InquirerPy",
    "autocorrect-py",
    "ctranslate2>=4.4.0",
    "edge-tts",
    "syllables",
    "pypinyin",
    "g2p-en",
    "xmltodict",
    # Optional AI/ML dependencies
    "replicate>=0.33.0",
]
dynamic = ["version"]

[project.optional-dependencies]
# Development and testing dependencies
dev = [
    # Testing framework
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist[psutil]>=3.3.1",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-html>=3.2.0",
    "pytest-json-report>=1.5.0",
    # Coverage tools
    "coverage[toml]>=7.2.0",
    "coverage-badge>=1.1.0",
    # Code quality
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pylint>=2.17.0",
    "bandit>=1.7.5",
    # Documentation
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    # Pre-commit hooks
    "pre-commit>=3.3.3",
    # Performance profiling
    "py-spy>=0.3.14",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0",
]

# GPU-specific dependencies
gpu = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0", 
    "torchvision>=0.15.0",
    "nvidia-ml-py>=12.535.0",
]

# Audio processing dependencies  
audio = [
    "librosa>=0.10.2",
    "pydub>=0.25.1",
    "resampy>=0.4.3",
    "soundfile>=0.12.1",
    "audioread>=3.0.0",
]

# All optional dependencies
all = [
    "VideoLingo[dev,gpu,audio]",
]

[project.urls]
Homepage = "https://github.com/Huanshere/VideoLingo"
Documentation = "https://videolingo.docs.dev" 
Repository = "https://github.com/Huanshere/VideoLingo.git"
"Bug Reports" = "https://github.com/Huanshere/VideoLingo/issues"
"Feature Requests" = "https://github.com/Huanshere/VideoLingo/discussions"

[project.scripts]
videolingo = "vlingo:main"

[project.entry-points."streamlit.commands"]
videolingo = "st:main"

# Tool configurations

[tool.setuptools]
packages = ["core"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.md", "*.txt"]

# Pytest configuration (alternative to pytest.ini)
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers", 
    "--strict-config",
    "-ra",
    "--cov=core",
    "--cov=core.utils",
    "--cov-branch", 
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:tests/reports/coverage_html",
    "--cov-report=xml:tests/reports/coverage.xml",
    "--cov-report=json:tests/reports/coverage.json",
    "--cov-fail-under=60",
]
markers = [
    "unit: Unit tests for individual functions and classes",
    "integration: Integration tests across multiple modules", 
    "e2e: End-to-end tests for complete workflows",
    "slow: Tests taking >5 seconds",
    "fast: Tests taking <1 second", 
    "network: Tests requiring internet access",
    "gpu: Tests requiring GPU/CUDA",
    "external: Tests requiring external services",
    "ai: AI/ML model tests",
    "audio: Audio processing tests",
    "video: Video processing tests", 
    "ui: Streamlit UI tests",
    "api: API integration tests",
    "smoke: Essential smoke tests",
    "regression: Regression tests",
    "wip: Work in progress tests",
    "broken: Known broken tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning", 
    "ignore::FutureWarning",
    "ignore::UserWarning",
    "ignore:.*base_path not writable.*",
    "ignore:.*demucs not available.*",
    "ignore:.*model not found.*",
    "ignore:.*GPU not available.*",
]
log_cli = true
log_cli_level = "INFO"
timeout = 600

# Coverage configuration
[tool.coverage.run]
source = ["core", "core.utils"]
branch = true
parallel = true
concurrency = ["multiprocessing"]
omit = [
    "*/tests/*",
    "*/test_*", 
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*",
    "batch/*",
    "tools/*", 
    "scripts/*",
    "translations/*",
    "output/*",
    "temp/*",
    "input/*",
    "_model_cache/*",
    "install*.py",
    "setup.py",
    "st.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__", 
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2
fail_under = 60
skip_covered = false
skip_empty = true

[tool.coverage.html]
directory = "tests/reports/coverage_html"
title = "VideoLingo Coverage Report"

[tool.coverage.xml]
output = "tests/reports/coverage.xml"

[tool.coverage.json]
output = "tests/reports/coverage.json"
pretty_print = true

# Black code formatter configuration
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | \.tox
    | \.eggs
    | \.pytest_cache
    | build
    | dist
    | htmlcov
    | node_modules
)/
'''

# isort import sorter configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["core", "tests"]
known_first_party = ["core"]
known_third_party = ["streamlit", "torch", "numpy", "pandas", "librosa"]

# MyPy type checker configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Temporarily disabled for VideoLingo
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "librosa.*",
    "moviepy.*", 
    "pydub.*",
    "whisperx.*",
    "demucs.*",
    "spacy.*",
    "streamlit.*",
    "yt_dlp.*",
]
ignore_missing_imports = true

# Pylint configuration
[tool.pylint.main]
load-plugins = ["pylint.extensions.broad_try_clause"]
py-version = "3.9"

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0903",  # Too few public methods
    "R0913",  # Too many arguments
    "W0613",  # Unused argument
    "W0621",  # Redefined outer name
    "E1101",  # Instance has no member (common with dynamic imports)
]

[tool.pylint.format]
max-line-length = 100

# Bandit security linter configuration  
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
tests = ["B201", "B301", "B401", "B501", "B601", "B701"]
skips = ["B101", "B601"]  # Skip assert statements and shell injection in tests